--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBS Papers - Study Resources</title>
+    <title>BBS Papers - ICT Exams</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -14,25 +14,28 @@
         }
 
         :root {
-            --primary: #2563eb;
-            --secondary: #1e40af;
-            --background: #f8fafc;
-            --text: #1e293b;
+            --primary: #3b82f6;
+            --primary-dark: #1d4ed8;
+            --background: #0f172a;
+            --text: #f8fafc;
+            --card-bg: #1e293b;
         }
 
         body {
             background-color: var(--background);
             color: var(--text);
+            min-height: 100vh;
         }
 
         .navbar {
-            background-color: white;
+            background: rgba(30, 41, 59, 0.95);
+            backdrop-filter: blur(10px);
             padding: 1rem 2rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 1000;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .navbar-content {
@@ -47,140 +50,180 @@
             font-size: 1.5rem;
             font-weight: bold;
             color: var(--primary);
+            text-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
         }
 
-        .nav-links {
-            display: flex;
-            gap: 2rem;
+        .search-container {
+            position: relative;
+            max-width: 400px;
+            margin: 0 auto;
         }
 
-        .nav-links a {
-            text-decoration: none;
-            color: var(--text);
-            font-weight: 500;
-            transition: color 0.3s ease;
+        .search-bar {
+            width: 100%;
+            padding: 0.8rem 1.5rem;
+            background: rgba(255, 255, 255, 0.1);
+            border: 2px solid rgba(59, 130, 246, 0.3);
+            border-radius: 50px;
+            color: white;
+            font-size: 1rem;
+            transition: all 0.3s ease;
         }
 
-        .nav-links a:hover {
-            color: var(--primary);
+        .search-bar:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 15px rgba(59, 130, 246, 0.5);
         }
 
         .hero {
-            margin-top: 4rem;
-            padding: 6rem 2rem;
+            padding: 8rem 2rem 4rem;
             text-align: center;
-            background: linear-gradient(135deg, var(--primary), var(--secondary));
-            color: white;
+            background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
         }
 
         .hero h1 {
             font-size: 3rem;
             margin-bottom: 1rem;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeInUp 0.8s forwards;
+            background: linear-gradient(135deg, #60a5fa 0%, #3b82f6 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: glow 2s ease-in-out infinite alternate;
         }
 
-        .hero p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeInUp 0.8s 0.2s forwards;
-        }
-
-        .search-bar {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 0.5rem;
-            background: white;
-            border-radius: 50px;
-            display: flex;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeInUp 0.8s 0.4s forwards;
-        }
-
-        .search-bar input {
-            flex: 1;
-            border: none;
-            padding: 0.5rem 1rem;
-            outline: none;
-            font-size: 1rem;
-        }
-
-        .search-bar button {
-            background: var(--primary);
-            color: white;
-            border: none;
-            padding: 0.5rem 1.5rem;
-            border-radius: 50px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-
-        .search-bar button:hover {
-            background: var(--secondary);
-        }
-
-        .content {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 0 2rem;
+        @keyframes glow {
+            from {
+                text-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
+            }
+            to {
+                text-shadow: 0 0 20px rgba(59, 130, 246, 0.8);
+            }
         }
 
         .papers-grid {
+            max-width: 1200px;
+            margin: 2rem auto;
+            padding: 0 2rem;
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2rem;
-            margin-top: 2rem;
         }
 
         .paper-card {
-            background: white;
-            border-radius: 10px;
-            padding: 1.5rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background: var(--card-bg);
+            border-radius: 15px;
+            padding: 2rem;
             cursor: pointer;
+            transition: all 0.3s ease;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .paper-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, var(--primary) 0%, transparent 400%);
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
 
         .paper-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .paper-card:hover::before {
+            opacity: 0.1;
         }
 
         .paper-card h3 {
+            font-size: 1.5rem;
             margin-bottom: 1rem;
             color: var(--primary);
+            position: relative;
         }
 
-        .paper-meta {
-            display: flex;
-            justify-content: space-between;
-            color: #64748b;
+        .term-papers {
+            display: none;
             margin-top: 1rem;
-            font-size: 0.9rem;
         }
 
-        @keyframes fadeInUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+        .term-button {
+            background: rgba(59, 130, 246, 0.1);
+            border: 1px solid var(--primary);
+            color: var(--text);
+            padding: 0.8rem 1.5rem;
+            border-radius: 8px;
+            margin: 0.5rem 0;
+            width: 100%;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .term-button:hover {
+            background: var(--primary);
+            transform: translateX(5px);
+        }
+
+        .pdf-viewer {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            z-index: 1000;
+            padding: 2rem;
+        }
+
+        .pdf-container {
+            background: white;
+            max-width: 1000px;
+            margin: 0 auto;
+            height: calc(100% - 100px);
+            border-radius: 15px;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .timer {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: var(--primary);
+            padding: 1rem;
+            border-radius: 10px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            z-index: 1001;
+        }
+
+        .close-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: var(--primary);
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 1001;
         }
 
         @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-            }
-
             .hero h1 {
                 font-size: 2rem;
             }
 
-            .hero p {
-                font-size: 1rem;
+            .papers-grid {
+                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -189,99 +232,85 @@
     <nav class="navbar">
         <div class="navbar-content">
             <div class="logo">📚 BBS Papers</div>
-            <div class="nav-links">
-                <a href="#home">Home</a>
-                <a href="#papers">Papers</a>
-                <a href="#notes">Notes</a>
-                <a href="#about">About</a>
+            <div class="search-container">
+                <input type="text" class="search-bar" placeholder="Search for papers...">
             </div>
         </div>
     </nav>
 
     <section class="hero">
-        <h1>Your Gateway to Academic Excellence</h1>
-        <p>Access thousands of exam papers and study notes to ace your exams</p>
-        <div class="search-bar">
-            <input type="text" placeholder="Search for papers or notes...">
-            <button>Search</button>
-        </div>
+        <h1>Year 10 ICT Papers</h1>
     </section>
 
-    <main class="content">
-        <div class="papers-grid">
-            <div class="paper-card">
-                <h3>Mathematics Paper 2023</h3>
-                <p>Complete solution guide with detailed explanations and step-by-step workings.</p>
-                <div class="paper-meta">
-                    <span>📅 2023</span>
-                    <span>⭐ 4.9/5</span>
-                </div>
-            </div>
-            <div class="paper-card">
-                <h3>Physics Final Exam</h3>
-                <p>Comprehensive collection of physics problems with solutions and formulas.</p>
-                <div class="paper-meta">
-                    <span>📅 2023</span>
-                    <span>⭐ 4.8/5</span>
-                </div>
-            </div>
-            <div class="paper-card">
-                <h3>Chemistry Notes</h3>
-                <p>Detailed study notes covering organic and inorganic chemistry topics.</p>
-                <div class="paper-meta">
-                    <span>📅 2023</span>
-                    <span>⭐ 4.7/5</span>
-                </div>
+    <div class="papers-grid">
+        <div class="paper-card" onclick="toggleTermPapers(this)">
+            <h3>ICT Year 10</h3>
+            <p>Complete examination papers for Year 10 ICT</p>
+            <div class="term-papers">
+                <button class="term-button" onclick="showPDF('ICT-term1')">Term 1 Paper</button>
+                <button class="term-button" onclick="showPDF('ICT-term2')">Term 2 Paper</button>
             </div>
         </div>
-    </main>
+    </div>
+
+    <div class="pdf-viewer" id="pdfViewer">
+        <button class="close-btn" onclick="closePDF()">Close</button>
+        <div class="timer" id="timer">1:30:00</div>
+        <div class="pdf-container">
+            <img src="https://placehold.co/800x1000" alt="PDF Preview" style="width: 100%; height: 100%; object-fit: contain;">
+        </div>
+    </div>
 
     <script>
-        // Add smooth scrolling
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
+        function toggleTermPapers(card) {
+            const termPapers = card.querySelector('.term-papers');
+            const currentDisplay = termPapers.style.display;
+            termPapers.style.display = currentDisplay === 'block' ? 'none' : 'block';
+        }
+
+        function showPDF(pdfName) {
+            document.getElementById('pdfViewer').style.display = 'block';
+            startTimer();
+            // In a real implementation, we would load the actual PDF here
+        }
+
+        function closePDF() {
+            document.getElementById('pdfViewer').style.display = 'none';
+            stopTimer();
+        }
+
+        let timerInterval;
+        function startTimer() {
+            let time = 90 * 60; // 1 hour 30 minutes in seconds
+            const timerDisplay = document.getElementById('timer');
+
+            timerInterval = setInterval(() => {
+                const hours = Math.floor(time / 3600);
+                const minutes = Math.floor((time % 3600) / 60);
+                const seconds = time % 60;
+
+                timerDisplay.textContent = `${hours}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+
+                if (time <= 0) {
+                    clearInterval(timerInterval);
+                    alert('Time\'s up!');
+                    closePDF();
+                }
+                time--;
+            }, 1000);
+        }
+
+        function stopTimer() {
+            clearInterval(timerInterval);
+        }
+
+        // Add hover effect to search bar
+        const searchBar = document.querySelector('.search-bar');
+        searchBar.addEventListener('focus', () => {
+            searchBar.style.boxShadow = '0 0 20px rgba(59, 130, 246, 0.7)';
         });
-
-        // Add paper cards dynamically
-        const papers = [
-            {
-                title: "Biology Final Exam",
-                description: "Complete guide to cellular processes and systems.",
-                year: "2023",
-                rating: "4.6/5"
-            },
-            {
-                title: "English Literature",
-                description: "Analysis of classic works and writing techniques.",
-                year: "2023",
-                rating: "4.8/5"
-            },
-            {
-                title: "Computer Science",
-                description: "Programming concepts and algorithms explained.",
-                year: "2023",
-                rating: "4.9/5"
-            }
-        ];
-
-        const papersGrid = document.querySelector('.papers-grid');
-        papers.forEach(paper => {
-            const card = document.createElement('div');
-            card.className = 'paper-card';
-            card.innerHTML = `
-                <h3>${paper.title}</h3>
-                <p>${paper.description}</p>
-                <div class="paper-meta">
-                    <span>📅 ${paper.year}</span>
-                    <span>⭐ ${paper.rating}</span>
-                </div>
-            `;
-            papersGrid.appendChild(card);
+        searchBar.addEventListener('blur', () => {
+            searchBar.style.boxShadow = 'none';
         });
     </script>
 </body>
