--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBS Papers - ICT Exams</title>
+    <title>BBS Papers - Academic Resources</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -14,8 +14,8 @@
         }
 
         :root {
-            --primary: #3b82f6;
-            --primary-dark: #1d4ed8;
+            --primary: #4f46e5;
+            --primary-light: #818cf8;
             --background: #0f172a;
             --text: #f8fafc;
             --card-bg: #1e293b;
@@ -30,16 +30,16 @@
         .navbar {
             background: rgba(30, 41, 59, 0.95);
             backdrop-filter: blur(10px);
-            padding: 1rem 2rem;
+            padding: 1.5rem 2rem;
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 1000;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         }
 
         .navbar-content {
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
@@ -47,183 +47,160 @@
         }
 
         .logo {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             font-weight: bold;
-            color: var(--primary);
-            text-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
+            color: var(--primary-light);
+            text-shadow: 0 0 15px rgba(79, 70, 229, 0.6);
+            transition: all 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: scale(1.05);
         }
 
         .search-container {
             position: relative;
-            max-width: 400px;
-            margin: 0 auto;
+            max-width: 500px;
+            width: 100%;
+            margin: 0 2rem;
         }
 
         .search-bar {
             width: 100%;
-            padding: 0.8rem 1.5rem;
+            padding: 1rem 1.5rem;
             background: rgba(255, 255, 255, 0.1);
-            border: 2px solid rgba(59, 130, 246, 0.3);
+            border: 2px solid rgba(79, 70, 229, 0.3);
             border-radius: 50px;
             color: white;
             font-size: 1rem;
             transition: all 0.3s ease;
         }
 
-        .search-bar:focus {
-            outline: none;
-            border-color: var(--primary);
-            box-shadow: 0 0 15px rgba(59, 130, 246, 0.5);
-        }
-
         .hero {
-            padding: 8rem 2rem 4rem;
+            padding: 10rem 2rem 6rem;
             text-align: center;
             background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: radial-gradient(circle at center, rgba(79, 70, 229, 0.15) 0%, transparent 70%);
+            animation: pulse 4s ease-in-out infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.2); }
         }
 
         .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            background: linear-gradient(135deg, #60a5fa 0%, #3b82f6 100%);
+            font-size: 4rem;
+            margin-bottom: 1.5rem;
+            background: linear-gradient(135deg, #818cf8 0%, #4f46e5 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            animation: glow 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes glow {
-            from {
-                text-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
-            }
-            to {
-                text-shadow: 0 0 20px rgba(59, 130, 246, 0.8);
-            }
+            animation: glow 3s ease-in-out infinite alternate;
         }
 
         .papers-grid {
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 2rem auto;
-            padding: 0 2rem;
+            padding: 2rem;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 2.5rem;
         }
 
-        .paper-card {
+        .subject-card {
             background: var(--card-bg);
-            border-radius: 15px;
-            padding: 2rem;
+            border-radius: 20px;
+            padding: 2.5rem;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             border: 1px solid rgba(255, 255, 255, 0.1);
             position: relative;
             overflow: hidden;
         }
 
-        .paper-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, var(--primary) 0%, transparent 400%);
-            opacity: 0;
-            transition: opacity 0.3s ease;
+        .subject-card:hover {
+            transform: translateY(-10px) scale(1.02);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+            border-color: var(--primary-light);
         }
 
-        .paper-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+        .subject-card h3 {
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+            color: var(--primary-light);
         }
 
-        .paper-card:hover::before {
-            opacity: 0.1;
+        .paper-list {
+            display: grid;
+            gap: 1rem;
         }
 
-        .paper-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            color: var(--primary);
-            position: relative;
-        }
-
-        .term-papers {
-            display: none;
-            margin-top: 1rem;
-        }
-
-        .term-button {
-            background: rgba(59, 130, 246, 0.1);
-            border: 1px solid var(--primary);
+        .paper-button {
+            background: rgba(79, 70, 229, 0.1);
+            border: 2px solid var(--primary);
             color: var(--text);
-            padding: 0.8rem 1.5rem;
-            border-radius: 8px;
-            margin: 0.5rem 0;
-            width: 100%;
+            padding: 1rem;
+            border-radius: 12px;
+            font-size: 1.1rem;
             cursor: pointer;
             transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
 
-        .term-button:hover {
+        .paper-button:hover {
             background: var(--primary);
-            transform: translateX(5px);
+            transform: translateX(10px);
         }
 
-        .pdf-viewer {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.9);
-            z-index: 1000;
-            padding: 2rem;
-        }
-
-        .pdf-container {
-            background: white;
-            max-width: 1000px;
-            margin: 0 auto;
-            height: calc(100% - 100px);
-            border-radius: 15px;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .timer {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: var(--primary);
-            padding: 1rem;
-            border-radius: 10px;
+        .paper-button i {
             font-size: 1.2rem;
-            font-weight: bold;
-            z-index: 1001;
         }
 
-        .close-btn {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            background: var(--primary);
-            color: white;
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            cursor: pointer;
-            z-index: 1001;
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .subject-card {
+            animation: slideIn 0.6s ease-out forwards;
+            opacity: 0;
+        }
+
+        .subject-card:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .subject-card:nth-child(3) {
+            animation-delay: 0.4s;
         }
 
         @media (max-width: 768px) {
             .hero h1 {
-                font-size: 2rem;
+                font-size: 2.5rem;
             }
 
             .papers-grid {
                 grid-template-columns: 1fr;
+                padding: 1rem;
             }
         }
     </style>
@@ -233,85 +210,57 @@
         <div class="navbar-content">
             <div class="logo">📚 BBS Papers</div>
             <div class="search-container">
-                <input type="text" class="search-bar" placeholder="Search for papers...">
+                <input type="text" class="search-bar" placeholder="Search for subjects or papers...">
             </div>
         </div>
     </nav>
 
     <section class="hero">
-        <h1>Year 10 ICT Papers</h1>
+        <h1>BBS Academic Papers</h1>
     </section>
 
     <div class="papers-grid">
-        <div class="paper-card" onclick="toggleTermPapers(this)">
-            <h3>ICT Year 10</h3>
-            <p>Complete examination papers for Year 10 ICT</p>
-            <div class="term-papers">
-                <button class="term-button" onclick="showPDF('ICT-term1')">Term 1 Paper</button>
-                <button class="term-button" onclick="showPDF('ICT-term2')">Term 2 Paper</button>
+        <div class="subject-card">
+            <h3>ICT</h3>
+            <div class="paper-list">
+                <button class="paper-button" onclick="alert('Opening ICT Paper 1')">
+                    Paper 1 - Theory
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+                <button class="paper-button" onclick="alert('Opening ICT Paper 2')">
+                    Paper 2 - Practical
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="subject-card">
+            <h3>Mathematics</h3>
+            <div class="paper-list">
+                <button class="paper-button">
+                    Paper 1 - Algebra
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+                <button class="paper-button">
+                    Paper 2 - Geometry
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="subject-card">
+            <h3>Science</h3>
+            <div class="paper-list">
+                <button class="paper-button">
+                    Paper 1 - Physics
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+                <button class="paper-button">
+                    Paper 2 - Chemistry
+                    <i class="fas fa-arrow-right"></i>
+                </button>
             </div>
         </div>
     </div>
-
-    <div class="pdf-viewer" id="pdfViewer">
-        <button class="close-btn" onclick="closePDF()">Close</button>
-        <div class="timer" id="timer">1:30:00</div>
-        <div class="pdf-container">
-            <img src="https://placehold.co/800x1000" alt="PDF Preview" style="width: 100%; height: 100%; object-fit: contain;">
-        </div>
-    </div>
-
-    <script>
-        function toggleTermPapers(card) {
-            const termPapers = card.querySelector('.term-papers');
-            const currentDisplay = termPapers.style.display;
-            termPapers.style.display = currentDisplay === 'block' ? 'none' : 'block';
-        }
-
-        function showPDF(pdfName) {
-            document.getElementById('pdfViewer').style.display = 'block';
-            startTimer();
-            // In a real implementation, we would load the actual PDF here
-        }
-
-        function closePDF() {
-            document.getElementById('pdfViewer').style.display = 'none';
-            stopTimer();
-        }
-
-        let timerInterval;
-        function startTimer() {
-            let time = 90 * 60; // 1 hour 30 minutes in seconds
-            const timerDisplay = document.getElementById('timer');
-
-            timerInterval = setInterval(() => {
-                const hours = Math.floor(time / 3600);
-                const minutes = Math.floor((time % 3600) / 60);
-                const seconds = time % 60;
-
-                timerDisplay.textContent = `${hours}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-
-                if (time <= 0) {
-                    clearInterval(timerInterval);
-                    alert('Time\'s up!');
-                    closePDF();
-                }
-                time--;
-            }, 1000);
-        }
-
-        function stopTimer() {
-            clearInterval(timerInterval);
-        }
-
-        // Add hover effect to search bar
-        const searchBar = document.querySelector('.search-bar');
-        searchBar.addEventListener('focus', () => {
-            searchBar.style.boxShadow = '0 0 20px rgba(59, 130, 246, 0.7)';
-        });
-        searchBar.addEventListener('blur', () => {
-            searchBar.style.boxShadow = 'none';
-        });
-    </script>
 </body>
 </html>
